# rogkit

./: .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  Home.py  LICENSE  Makefile  README.md  ROADMAP.md  aliases  pyproject.toml  requirements.txt  rogkit_sample.toml
.claude/skills/rogkit-tool/: SKILL.md
go/: README.md  go.mod  go.sum
go/cmd/dirfind/: main.go
go/cmd/fastfind/: main.go
go/cmd/files/: main.go
go/cmd/finder/: main.go
go/cmd/ishtime/: main.go
go/cmd/replacer/: main.go
go/cmd/search/: main.go
go/internal/finder/: finder.go
go/internal/search/: run.go
go/internal/util/: files.go
pages/: Media.py  Password.py  Randomcase.py
rogkit_package/: __init__.py  settings.py  speeder.txt
rogkit_package/archived/media/: __init__.py  afi_100.txt  media_settings.py  plex_server.py
rogkit_package/deprecated/: __init__.py  plex.py
rogkit_package/deprecated/media/: media_list.py  media_main.py  media_records.py  media_utils.py  plex_library.py  shrink.py  tmdb.py
rogkit_package/media/: __init__.py  daemon.py  database_utils.py  helpers.py  media.csv  media.py  media_args.py  media_cache.py  media_list.py  media_main.py  media_records.py  media_settings.py  media_tk.py  media_utils.py  models.py  parse_args.py  plex_library.py  plex_record.py  plex_server.py  search.py  shrink.py  tmdb.py  update.py  utils.py
rogkit_package/media/extra_sources/: cache.py  integrate.py
rogkit_package/plex_extra_sources/: __init__.py  cache.py  integrate.py
rust/: Cargo.toml  README.md
rust/filehash/: Cargo.toml
rust/filehash/benches/: hash_benchmark.rs
rust/filehash/src/: dedup.rs  hasher.rs  lib.rs  main.rs  walker.rs
scripts/: build_go.sh
tests/: test_archive.py  test_bignum.py  test_bytes.py  test_catyears.py  test_clu.py  test_csvr.py  test_dedupe.py  test_dice.py  test_doctor.py  test_envr.py  test_generations.py  test_hash.py  test_httpcheck.py  test_jsonr.py  test_jwt.py  test_myip.py  test_note.py  test_plural.py  test_ports.py  test_procs.py  test_pw.py  test_rogkit.py  test_rounder.py  test_scrape.py  test_seconds.py  test_serve.py  test_setup.py  test_strike.py  test_syscheck.py  test_tmdb.py  test_ts.py  test_url.py
