[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rogkit"
version = "0.1.0"
description = "Rog's personal utility toolbox (media, files, system, and more)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [ { name = "Roger D", email ="rdubar@gmail.com" } ]
dependencies = [
  "boto3",
  "botocore",
  "colorama",
  "convertdate",
  "faker",
  "ffmpeg-python",
  "folium",
  "geopy",
  "matplotlib",
  "numpy",
  "openai",
  "pandas",
  "paramiko",
  "Pillow",
  "plexapi",
  "psutil",
  "pyclip",
  "pyfiglet",
  "pyheif",
  "pymongo",
  "python-dateutil",
  "python-dotenv",
  "pytz",
  "PyYAML",
  "reportlab",
  "requests",
  "requests-html",
  "send2trash",
  "sh",
  "spotipy",
  "sqlalchemy",
  "thefuzz",
  "toml",
  "tqdm",
  "wikipedia",
  "yt-dlp",
]

[project.optional-dependencies]
media = [
  "yt-dlp",
  "ffmpeg-python",
  "Pillow",
  "pyheif",
  "plexapi",
  "paramiko",
  "python-dotenv",
]
ui = [
  "streamlit",
]
aws = [
  "boto3",
  "botocore",
]
db = [
  "sqlalchemy",
  "pymongo",
]
data = [
  "pandas",
  "numpy",
  "matplotlib",
  "python-dateutil",
  "pytz",
  "reportlab",
  "folium",
  "geopy",
]
cli = [
  "pyclip",
  "pyfiglet",
  "send2trash",
  "thefuzz",
  "sh",
  "spotipy",
  "psutil",
  "openai",
  "requests-html",
  "faker",
  "convertdate",
  "wikipedia",
]
dev = [
  "ruff",
  "black",
  "mypy",
  "pytest",
]

[dependency-groups]
cli = ["pyclip", "pyfiglet", "send2trash", "thefuzz", "sh", "spotipy", "psutil", "openai", "requests-html", "faker", "convertdate", "wikipedia"]
media = ["yt-dlp", "ffmpeg-python", "Pillow", "pyheif", "plexapi", "paramiko", "python-dotenv"]
db = ["sqlalchemy", "pymongo"]
data = ["pandas", "numpy", "matplotlib", "python-dateutil", "pytz", "reportlab", "folium", "geopy"]
aws = ["boto3", "botocore"]
ui = ["streamlit"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["rogkit_package*", "pages*"], namespaces = false } }

[tool.ruff]
# Ignore trailing whitespace warnings
ignore = [
    "W291",  # trailing-whitespace
    "W293",  # blank-line-with-whitespace
]
