[workspace]
members = ["filehash"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Roger D. <rdubar@users.noreply.github.com>"]
license = "MIT"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Parallel processing
rayon = "1.10"
walkdir = "2.5"

# Hashing algorithms
blake3 = "1.5"
md5 = "0.7"
sha2 = "0.10"

# File I/O
memmap2 = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress and output
indicatif = "0.17"
colored = "2.1"

# Benchmarking
criterion = "0.5"
